[package]
name = "micetimer"
version = "0.1.0"
edition = "2024"
authors = ["cagedbird043 <cagedbird@miceworld.top>"]
description = "A systemd-style timer daemon for Android with WakeLock support"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
nix = { version = "0.27", features = ["fs", "time", "signal", "event"] }
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"
toml = "0.8"
libc = "0.2" # Direct libc access is sometimes needed for specific Android ioctls or missing nix features
crossbeam-channel = "0.5" # For clean shutdown signals
signal-hook = "0.3"

# We might want to use a parsing library for durations if we want full Systemd compat
# humantime is good for "15m", "1h 30m" etc.
humantime = "2.1"
humantime-serde = "1.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1